fix: local images

--- a/src/pages/ko/cypher-open/introduction.mdx
+++ b/src/pages/ko/cypher-open/introduction.mdx
@@ -12,25 +12,25 @@ import { Image } from '@astrojs/image/components';
 사이퍼 시스템은 누메네라에서 시작했고, 그 기반이 되는 범용 알피지 시스템입니다. 누메네라에 이어 스트레인지를 시작으로 정말 다양한 장르와 소재(디앤디 자료였던 프톨루스, 우주 SF, 동화, 공포, 수퍼 영웅, 소방관, 공룡, 신화, 바다의 수인족 등등)로 수 많은 사이퍼 시스템 알피지들을 몬티 쿡 게임즈와 서드파티에서 출판했습니다. 자세한 설명이 담긴 사이퍼 시스템 공식 룰 북과 자료들을 판매하고 있습니다.
 
 <div class="books grid grid-cols-4 w-fit">
-  <Image format="webp" width="160px" aspectRatio={31/40} src="https://d1vzi28wh99zvq.cloudfront.net/images/4952/289943.jpg" />
-  <Image format="webp" width="160px" aspectRatio={31/40} src="https://d1vzi28wh99zvq.cloudfront.net/images/4952/114133.jpg" />
-  <Image format="webp" width="160px" aspectRatio={31/40} src="https://d1vzi28wh99zvq.cloudfront.net/images/4952/129405.jpg" />
-  <Image format="webp" width="160px" aspectRatio={31/40} src="https://d1vzi28wh99zvq.cloudfront.net/images/4952/344033.jpg" />
+  <Image format="webp" width="196px" aspectRatio={31/40} src="/cypher-book.jpg" />
+  <Image format="webp" width="196px" aspectRatio={31/40} src="/numenera-book.jpg" />
+  <Image format="webp" width="196px" aspectRatio={31/40} src="/strange-book.jpg" />
+  <Image format="webp" width="196px" aspectRatio={31/40} src="/ptolus-book.jpg" />
 
-  <Image format="webp" width="160px" aspectRatio={31/40} src="https://d1vzi28wh99zvq.cloudfront.net/images/4952/296000.jpg" />
-  <Image format="webp" width="160px" aspectRatio={31/40} src="https://d1vzi28wh99zvq.cloudfront.net/images/4952/337265.jpg" />
-  <Image format="webp" width="160px" aspectRatio={31/40} src="https://d1vzi28wh99zvq.cloudfront.net/images/4952/303266.jpg" />
-  <Image format="webp" width="160px" aspectRatio={31/40} src="https://d1vzi28wh99zvq.cloudfront.net/images/4952/327782.jpg" />
+  <Image format="webp" width="196px" aspectRatio={31/40} src="/the-stars-are-fire-book.jpg" />
+  <Image format="webp" width="196px" aspectRatio={31/40} src="/god-for-saken.jpg" />
+  <Image format="webp" width="196px" aspectRatio={31/40} src="/stay-alive.jpg" />
+  <Image format="webp" width="196px" aspectRatio={31/40} src="/we-are-all-mad-here.jpg" />
 
-  <Image format="webp" width="160px" aspectRatio={31/40} src="https://d1vzi28wh99zvq.cloudfront.net/images/4952/379046.jpg" />
-  <Image format="webp" width="160px" aspectRatio={31/40} src="https://d1vzi28wh99zvq.cloudfront.net/images/4952/392831.jpg" />
-  <Image format="webp" width="160px" aspectRatio={31/40} src="https://d1vzi28wh99zvq.cloudfront.net/images/4952/186171.jpg" />
-  <Image format="webp" width="160px" aspectRatio={31/40} src="https://d1vzi28wh99zvq.cloudfront.net/images/4952/227681.jpg" />
+  <Image format="webp" width="196px" aspectRatio={31/40} src="/claim-the-sky-book.jpg" />
+  <Image format="webp" width="196px" aspectRatio={31/40} src="/first-responders-book.jpg" />
+  <Image format="webp" width="196px" aspectRatio={31/40} src="/gods-of-fall-book.jpg" />
+  <Image format="webp" width="196px" aspectRatio={31/40} src="/unmasked-book.jpg" />
 
-  <Image format="webp" width="160px" aspectRatio={31/40} src="https://d1vzi28wh99zvq.cloudfront.net/images/4952/210058.jpg" />
-  <Image format="webp" width="160px" aspectRatio={31/40} src="https://d1vzi28wh99zvq.cloudfront.net/images/4952/397201.jpg" />
-  <Image format="webp" width="160px" aspectRatio={31/40} src="https://cf.geekdo-images.com/1WpzRO1HSY4Xy7j0FTgLUQ__imagepage/img/WaNwg6aLlUIftP3Af2Bad_DT6BU=/fit-in/900x600/filters:no_upscale():strip_icc()/pic6544437.jpg" />
-  <Image format="webp" width="160px" aspectRatio={31/40} src="https://d1vzi28wh99zvq.cloudfront.net/images/11747/223730.png" />
+  <Image format="webp" width="196px" aspectRatio={31/40} src="/expanded-world-book.jpg" />
+  <Image format="webp" width="196px" aspectRatio={31/40} src="/the-origin-book.jpg" />
+  <Image format="webp" width="196px" aspectRatio={31/40} src="/tidal-blades-book.webp" />
+  <Image format="webp" width="196px" aspectRatio={31/40} src="/vurt-book.png" />
 </div>
 
 최근 몬티 쿡 게임즈는 사이퍼 시스템 오픈 라이선스(CSOL)와 함께 사이퍼 시스템 레퍼런스 문서(CSRD)도 [공개](https://csol.montecookgames.com/)했습니다. 여기에는 핵심 규칙 뿐만 아니라, 사이퍼 시스템 코어북에 실려 있는 여러 캐릭터의 유형, 수식어, 특징, 특수능력, 장르별 해설, 생물, 사이퍼의 데이터가 상당 부분 포함되어 있습니다.
